@@ -1,7 +1,6 @@
 master
 - Mayhem
   Fix next/previous page keybinds.
-
 - noface
   Improved checking for own post directly after posting. This should sort out a number of small hiccups.
   Fixed crossquotes not showing the correct archiver.
@@ -12,6 +11,10 @@ master
   Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
   Quick tags won't be inserted where not possible anymore (like spoilers on /g/).
   Added support for coloured IDs and post highlighting from the native 4chan extension.
+  Improved Linkifier to be much lighter.
+  Embedding:
+    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
+    - Adds a menu button 'Embed all in post'.
 
 1.0.16
 - Zixaphir
